package com.demain.adapter;

/**
 * The interface expected by the client.<br> A rowing boat is rowed to move.
 * <p>
 * 划船接口
 */
public interface RowingBoat {

    /**
     * 划船
     */
    void row();

}
